# pymissense

./: CITATION.cff  README.md  pylintrc  pyproject.toml
.github/workflows/: pylint.yml
missense/: missense.py
resources/tests/Q9UQ13/: alpha.tsv
tests/: test_run.py
