[project]
name = "pymissense"
dynamic = ["version"]
description = "PyMissense create the plot and modified pdb as shown in the AlphaMissense Paper"
readme = "README.md"

authors = [
    {name = "Thorsten Wagner", email = "thorsten.wagner@mpi-dortmund.mpg.de" },
    {name = "Tobias Raisch", email = "tobias.raisch@mpi-dortmund.mpg.de" }
]

dependencies = [
  "matplotlib", "numpy","requests"
]

[tool.setuptools]
packages = ["missense"]

[project.scripts]
pymissense = "missense.missense:_main_"

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel", "Cython"]

[tool.setuptools_scm]
